--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,14 @@
     ],
     "require": {
         "php": ">=5.6",
-        "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/adminimal_admin_toolbar": "^1.9",
         "drupal/adminimal_theme": "^1.5",
         "drupal/bootstrap_barrio": "^4.22",
-        "drupal/bootstrap_sass": "^1.9",
         "drupal/computed_field": "^2.0",
         "drupal/console": "^1.9",
-        "drupal/core": "^8.7.0",
+        "drupal/core-recommended": "^8.8",
         "drupal/devel": "^2.1",
         "drupal/entity_browser": "^2.2",
         "drupal/metatag": "^1.9",
@@ -43,7 +41,6 @@
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
-        "webflo/drupal-core-require-dev": "^8.7.0"
     },
     "conflict": {
         "drupal/drupal": "*"
