Update and started working on custom module for Pothen Esxes

--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,14 @@
         "drupal/core-recommended": "^8.8",
         "drupal/devel": "^2.1",
         "drupal/entity_browser": "^2.2",
+        "drupal/jsonapi_extras": "^3.14",
         "drupal/metatag": "^1.9",
         "drupal/migrate_plus": "^4.2",
         "drupal/migrate_tools": "^4.1",
         "drupal/paragraphs": "^1.8",
         "drupal/pathauto": "^1.4",
         "drupal/quick_node_clone": "^1.12",
+        "drupal/restui": "^1.18",
         "drupal/view_mode_page": "^3.1",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
