--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,13 @@
             "name": "Listen for XDebug",
             "type": "php",
             "request": "launch",
-            "port": 9000
+            "port": 9000,
+            "pathMappings": {
+                "/home/greg/workspace/chatterbox.network": "${workspaceRoot}"
+            },
+            "xdebugSettings": {
+                "show_hidden": 1
+            }
         },
         {
             "name": "Launch currently open script",
@@ -16,7 +22,7 @@
             "request": "launch",
             "program": "${file}",
             "cwd": "${fileDirname}",
-            "port": 9000
+            "port": 9000,
         }
     ]
 }
