--- a/composer.json
+++ b/composer.json
@@ -21,21 +21,22 @@
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/adminimal_admin_toolbar": "^1.9",
         "drupal/adminimal_theme": "^1.5",
-        "drupal/bootstrap_barrio": "^4.22",
+        "drupal/bootstrap_barrio": "^5.0",
         "drupal/computed_field": "^2.0",
         "drupal/console": "^1.9",
         "drupal/core-recommended": "^8.8",
-        "drupal/devel": "^2.1",
+        "drupal/devel": "2.x",
         "drupal/entity_browser": "^2.2",
         "drupal/jsonapi_extras": "^3.14",
+        "drupal/kint": "^2.1",
         "drupal/metatag": "^1.9",
-        "drupal/migrate_plus": "^4.2",
-        "drupal/migrate_tools": "^4.1",
+        "drupal/migrate_plus": "^5.0",
+        "drupal/migrate_tools": "^5.0",
         "drupal/paragraphs": "^1.8",
         "drupal/pathauto": "^1.4",
         "drupal/quick_node_clone": "^1.12",
         "drupal/restui": "^1.18",
-        "drupal/view_mode_page": "^3.1",
+        "drupal/view_mode_page": "^4.0",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
